--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -16,7 +16,16 @@
    "outputs": [],
    "source": [
     "class Perceptron():\n",
-    "    def __init__(lr, )"
+    "    def __init__(self, lr, n_iter=50, random_state=1):\n",
+    "        self.lr = lr\n",
+    "        self.n_iter = n_iter\n",
+    "        self.random_state = self.random_state\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "\n",
+    "        for _ in range(n_iter):\n",
+    "            errors = 0\n",
+    "            "
    ]
   }
  ],
