--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -22,10 +22,23 @@
     "        self.random_state = self.random_state\n",
     "\n",
     "    def fit(self, X, y):\n",
+    "        rgenerator = np.random.RandomState(self.random_state)\n",
+    "        self.w = rgenerator.normal(loc=0.0, scale=0.01, size=1 + X.shape[1])\n",
+    "\n",
+    "        self.errors = []\n",
     "\n",
     "        for _ in range(n_iter):\n",
     "            errors = 0\n",
-    "            "
+    "            for xi, yi in zip(X, y):\n",
+    "                delta_wi = self.lr * (y - self.predict(xi))\n",
+    "                self_w[1:] += delta_wi * xi\n",
+    "                self_w[0] += delta_wi\n",
+    "                \n",
+    "                errors += int(delta_wi != 0)\n",
+    "            self.errors.append(errors)\n",
+    "\n",
+    "    def compute_z(self, X):\n",
+    "        return "
    ]
   }
  ],
