object oriented perceptron implementation

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -31,14 +31,18 @@
     "            errors = 0\n",
     "            for xi, yi in zip(X, y):\n",
     "                delta_wi = self.lr * (y - self.predict(xi))\n",
-    "                self_w[1:] += delta_wi * xi\n",
-    "                self_w[0] += delta_wi\n",
+    "                self.w[1:] += delta_wi * xi\n",
+    "                self.w[0] += delta_wi\n",
     "                \n",
     "                errors += int(delta_wi != 0)\n",
+    "            print(errors)\n",
     "            self.errors.append(errors)\n",
     "\n",
     "    def compute_z(self, X):\n",
-    "        return "
+    "        return np.dot(X, self.w[1:]) + self.w[0]\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        return np.where(self.compute_z(X) >= 0.0, 1, -1)"
    ]
   }
  ],
