object_oriented_perceptron_implementation

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -44,6 +44,15 @@
     "    def predict(self, X):\n",
     "        return np.where(self.compute_z(X) >= 0.0, 1, -1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perceptron = Perceptron(0.01)\n"
+   ]
   }
  ],
  "metadata": {
