training perceptron on iris

--- a/1. perceptron.ipynb
+++ b/1. perceptron.ipynb
@@ -35,7 +35,7 @@
     "        for _ in range(self.n_iter):\n",
     "            errors = 0\n",
     "            for xi, yi in zip(X, y):\n",
-    "                delta_wi = self.lr * (y - self.predict(xi))\n",
+    "                delta_wi = self.lr * (yi - self.predict(xi))\n",
     "                self.w[1:] += delta_wi * xi\n",
     "                self.w[0] += delta_wi\n",
     "                \n",
