training perceptron with all features of iris

--- a/3. training_perceptron_on_all_features.ipynb
+++ b/3. training_perceptron_on_all_features.ipynb
@@ -205,7 +205,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "    The perceptron converges after 4th epoch when training it with all the features. Unlike the training\n",
+    "    on the 2 features in which the perceptron converged on the 6th\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
