adaptive linear neuron oop implementation

--- a/4. adaptive_linear_neuron_(adaline).ipynb
+++ b/4. adaptive_linear_neuron_(adaline).ipynb
@@ -22,8 +22,25 @@
     "        self.random_state = random_state\n",
     "\n",
     "\n",
-    "    \n",
+    "    def fit(self, X, y):\n",
+    "        rgen = np.random.RandomState(self.random_state)\n",
+    "        self.w = rgen.normal(loc=0.0, scale=0.01, size=1 + X.shape[1])\n",
     "\n",
+    "        self.cost = []\n",
+    "\n",
+    "        for i in range(self.n_iter):\n",
+    "            net_input = self.net_input(X)\n",
+    "            output = self.activation(net_input)\n",
+    "\n",
+    "            errs = (y - output)\n",
+    "            self.w[1:] += self.lr * X.T.dot(errs)\n",
+    "            self.w[0] += self.lr * errs.sum()\n",
+    "            cost = (errors**2).sum() / 2.0\n",
+    "            self.cost.append(cost)\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "        \n",
     "    def net_input(self, X):\n",
     "        return np.dot(X, self.w[1:]) + self.w[0]\n",
     "\n",
