--- a/4. adaptive_linear_neuron_(adaline).ipynb
+++ b/4. adaptive_linear_neuron_(adaline).ipynb
@@ -35,7 +35,7 @@
     "            errs = (y - output)\n",
     "            self.w[1:] += self.lr * X.T.dot(errs)\n",
     "            self.w[0] += self.lr * errs.sum()\n",
-    "            cost = (errors**2).sum() / 2.0\n",
+    "            cost = (errs**2).sum() / 2.0\n",
     "            self.cost.append(cost)\n",
     "\n",
     "        return self\n",
