using a convenient approach: labelEncoder

--- a/7. handling_categorical_data.ipynb
+++ b/7. handling_categorical_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "2   blue   XL   15.3      class2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "2   blue     3   15.3      class2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "2   blue   XL   15.3      class2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,74 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>color</th>\n",
-       "      <th>size</th>\n",
-       "      <th>price</th>\n",
-       "      <th>class_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>green</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>class1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>red</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>class1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>blue</td>\n",
-       "      <td>3</td>\n",
-       "      <td>15.3</td>\n",
-       "      <td>class2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   color  size  price class_label\n",
-       "0  green     1   10.1      class1\n",
-       "1    red     2   13.5      class1\n",
-       "2   blue     3   15.3      class2"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let us convert it back:\n",
     "df['size'] = df['size'].map(size_mapping)"
@@ -329,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +327,7 @@
        "2   blue     3   15.3            1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,6 +339,107 @@
     "class_mapping = {label: idx for idx, label in enumerate(np.unique(df['class_label']))}\n",
     "df['class_label'] = df['class_label'].map(class_mapping)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>color</th>\n",
+       "      <th>size</th>\n",
+       "      <th>price</th>\n",
+       "      <th>class_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>green</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>class1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>red</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>class1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>blue</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>class2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   color  size  price class_label\n",
+       "0  green     1   10.1      class1\n",
+       "1    red     2   13.5      class1\n",
+       "2   blue     3   15.3      class2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can reverse the encoding as follows:\n",
+    "inv_encoding = {int(v): k for k, v in class_mapping.items()}\n",
+    "df['class_label'] = df['class_label'].map(inv_encoding)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alternatively, there is a convenient way to encode class labels by using LabelEncoder \n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "class_le = LabelEncoder()\n",
+    "y = class_le.fit_transform(df['class_label'].values)\n",
+    "y"
    ]
   },
   {
