using inverse_transform

--- a/7. handling_categorical_data.ipynb
+++ b/7. handling_categorical_data.ipynb
@@ -444,6 +444,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['class1', 'class1', 'class2'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can use inverse_transform to get back our integer class labels back to their string representation\n",
+    "class_le.inverse_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
