using one hot encoder

--- a/7. handling_categorical_data.ipynb
+++ b/7. handling_categorical_data.ipynb
@@ -468,7 +468,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Since nominal features are neither numerical nor ordinal, we can not apply the preceding two techniques\n",
+    "# To work around this, we can perform a technique called one-hot encoding\n",
+    "\n",
+    "# It is important to keep in mind that although we performed label encoding on class labels that are nominal, \n",
+    "# the scikit learn estimators would treat class labels as categorical that does not imply any order (nominal).\n",
+    "\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "X = df"
+   ]
   }
  ],
  "metadata": {
