--- a/binary_classification_problem/binary_classification_on_diabetes.ipynb
+++ b/binary_classification_problem/binary_classification_on_diabetes.ipynb
@@ -1994,7 +1994,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2009,6 +2009,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7c2737f5cd3eb6a237b7123ce75c641d6f975db18b0c0702ad2055474d78171c"
+   }
   }
  },
  "nbformat": 4,
