feature scaling manully and through sklearn

--- a/10. feature_scaling.ipynb
+++ b/10. feature_scaling.ipynb
@@ -134,21 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'MinMaxScalar' from 'sklearn.preprocessing' (c:\\Users\\Ammar\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\preprocessing\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32md:\\University Files\\Assignments\\7th Semester\\Machine Learning\\ML Code\\10. feature_scaling.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/10.%20feature_scaling.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Using sklearn's implementations of MinMaxScalar and StandardScalar\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/10.%20feature_scaling.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m MinMaxScalar\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/10.%20feature_scaling.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m mms \u001b[39m=\u001b[39m MinMaxScaler()\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/University%20Files/Assignments/7th%20Semester/Machine%20Learning/ML%20Code/10.%20feature_scaling.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X_normalized \u001b[39m=\u001b[39m mms\u001b[39m.\u001b[39mfit_transform(X)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'MinMaxScalar' from 'sklearn.preprocessing' (c:\\Users\\Ammar\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\preprocessing\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using sklearn's implementations of MinMaxScalar and StandardScalar\n",
     "from sklearn.preprocessing import MinMaxScalar\n",
@@ -162,7 +150,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScalar\n",
+    "std_scalar = StandardScalar()\n",
+    "X_std = std_scalar.fit_transform(X)\n",
+    "X_std"
+   ]
   }
  ],
  "metadata": {
