--- a/11. feature_selection.ipynb
+++ b/11. feature_selection.ipynb
@@ -27,12 +27,38 @@
     "        self.random_state = random_state\n",
     "    \n",
     "    def fit(self, X, y):\n",
-    "        X_train, X_test, y_train, y_test /= \n",
+    "        X_train, X_test, y_train, y_test = \\ \n",
     "        train_test_split (\n",
     "            X, y, test_size=self.test_size, \n",
     "            stratify=y, random_state=self.random_state\n",
     "        )\n",
-    "        "
+    "\n",
+    "        dim = X_train.shape[1]\n",
+    "        self.indices = tuple(range(dim))\n",
+    "        self.subsets = [self.indices]\n",
+    "        score = self.get_score(X_train, X_test, y_train, y_test, self.indices)\n",
+    "\n",
+    "        self.scores = [score]\n",
+    "\n",
+    "        while dim > self.k_features:\n",
+    "            scores = []\n",
+    "            subsets = []\n",
+    "\n",
+    "            for p in combinations(self.indices, r=dim-1):\n",
+    "                score = self.get_score(\n",
+    "                    X_train, X_test, y_train, y_test, p)\n",
+    "                scores.append(score)\n",
+    "                subsets.append(p)\n",
+    "\n",
+    "            best_acc_index = np.argmax(scores)\n",
+    "            self.indices = subsets[best_acc_index]\n",
+    "            \n",
+    "\n",
+    "    def get_score(X_train, X_test, y_train, y_test, col_indices):\n",
+    "        self.classifier.fit(X_train.iloc[:, col_indices], y_train)\n",
+    "        self.current_score = self.classifier.score(\n",
+    "            X_test.iloc[:, col_indices], y_test)\n",
+    "        return self.current_score"
    ]
   }
  ],
